[project]
name = "tornadoapi_guard"
version = "0.0.1"
description = "A security library for Tornado to control IPs, log requests, and detect penetration attempts. Powered by guard-core."
authors = [
    {name = "Renzo Franceschini", email = "rennf93@users.noreply.github.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.15"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "tornado>=6.5.5,<7.0.0",
    "guard-core>=1.0.1,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/rennf93/tornadoapi-guard"

[project.optional-dependencies]
dev = [
    "bandit[toml]",
    "deptry",
    "httpx",
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-material",
    "mypy",
    "pip-audit",
    "pre-commit",
    "pymarkdownlnt",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "radon",
    "ruff",
    "types-cachetools",
    "types-requests",
    "vulture",
    "xenon",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tornadoapi_guard"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".env",
    ".envrc",
    ".venv/",
    ".github/",
    ".claude/",
    "CLAUDE.md",
    ".pre-commit-config.yaml",
    "compose.yml",
    "Dockerfile",
    "Makefile",
    "mkdocs.yml",
    "vulture_whitelist.py",
    "tests/",
    "docs/",
    "examples/",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py310"
exclude = ["vulture_whitelist.py", ".venv"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # isort
    "I",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=tornadoapi_guard --cov-branch --cov-report=term-missing"
markers = [
    "asyncio: mark tests as async"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
exclude = ["vulture_whitelist.py", ".venv"]

[[tool.mypy.overrides]]
module = "pydantic.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "redis.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["guard_core", "guard_core.*", "guard_core.core.*", "guard_core.handlers.*", "guard_core.protocols.*", "guard_core.decorators.*", "guard_core.utils", "guard_core.detection_engine.*"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["guard_agent", "guard_agent.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pymarkdown.plugins.md007]
# MD007 - Unordered list indentation (set to 2 spaces)
enabled = true
indent = 2

[tool.pymarkdown.plugins.md012]
# MD012 - Multiple consecutive blank lines (allow up to 2)
enabled = true
maximum = 2

[tool.pymarkdown.plugins.md013]
# MD013 - Line length (disabled)
enabled = false

[tool.pymarkdown.plugins.md024]
# MD024 - Multiple headings with same content (allow siblings only)
enabled = true
siblings_only = true

[tool.pymarkdown.plugins.md033]
# MD033 - Inline HTML
enabled = false

[tool.pymarkdown.plugins.md035]
# MD035 - Horizontal rule style (disabled - allow any style)
enabled = false

[tool.pymarkdown.plugins.md041]
# MD041 - First line in file should be top-level heading (disabled)
enabled = false

[tool.pymarkdown.plugins.md046]
# MD046 - Code block style (disabled - allow any style)
enabled = false

[tool.pymarkdown.plugins.md029]
# MD029 - Ordered list item prefix (disabled - allow any style)
enabled = false

[tool.vulture]
paths = ["tornadoapi_guard", "tests", "vulture_whitelist.py"]
exclude = ["**/conftest.py", ".venv"]
min_confidence = 100
ignore_decorators = [
    "@app.route",
    "@pytest.fixture",
    "@pytest.mark.*",
    "@validator",
    "@root_validator",
    "@field_validator",
    "@model_validator",
]
ignore_names = [
    "test_*",
    "Test*",
    "cleanup_*",
    "mock_*",
    "expected_*",
    "exc_*",
    "__*__",
    "Config",
    "Field",
]
sort_by_size = true

[tool.bandit]
skips = ["B101", "B601"]
exclude_dirs = ["tests", ".venv", "vulture_whitelist.py"]
severity = "medium"

[tool.radon]
exclude = "tests/*,.venv/*,vulture_whitelist.py"
cc_min = "C"
mi_min = "A"
no_assert = false
show_closures = true
total_average = true

[tool.xenon]
max_absolute = "B"
max_modules = "A"
max_average = "A"
exclude = ["tests/*", ".venv/*", "vulture_whitelist.py"]
ignore = []

[tool.deptry]
exclude = ["tests", ".venv", "vulture_whitelist.py", "examples", "docs", "manual_testing"]
extend_exclude = ["conftest.py", "setup.py"]
known_first_party = ["tornadoapi_guard", "guard_core"]
per_rule_ignores = { "DEP001" = [
    "guard_agent",
], "DEP002" = [
    "guard-core",
    "httpx",
    "bandit",
    "deptry",
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-material",
    "mypy",
    "pip-audit",
    "pre-commit",
    "pymarkdownlnt",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "radon",
    "ruff",
    "types-cachetools",
    "types-requests",
    "vulture",
    "xenon",
] }
